--- a/jstl/src/main/webapp/WEB-INF/web.xml
+++ b/jstl/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
   </servlet>
   
   <servlet-mapping>
-  	<servlet-name>Main</servlet-name>
+  	<servlet-name>Main</servlet-name>	<!-- 확장자가 .do를 실행하면 Main서블렛을 실행 -->
   	<url-pattern>*.do</url-pattern>
   </servlet-mapping>
   
