--- a/jstl/src/main/java/class_bundle/mainProp.properties
+++ b/jstl/src/main/java/class_bundle/mainProp.properties
@@ -1,3 +1,4 @@
+
 signUp.do=service.SignUpPage
 signUpSave.do=service.MemberJoin
 signIn.do=service.SignInPage
@@ -9,4 +10,4 @@ boardView.do=service.BoardView
 boardUpdate.do=service.UpdateService
 boardDelete.do=service.DeleteService
 comment.do=service.CommentSave
-commentDelete.do=sevice.CommentDelete
+commentDelete.do=service.CommentDelete
